--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -298,6 +298,21 @@
         cursor: pointer;
       }
     }
+
+    .btn {
+      background: none;
+      border: none;
+      color: var(--color-light);
+      background-color: var(--color-dark-3);
+      padding: 0.3rem;
+      width: 5rem;
+      border-radius: 0.4rem;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
     .card--1 {
       &__title {
         // margin-bottom: 0.5rem;
@@ -317,19 +332,35 @@
         color: var(--color-dark);
         text-align: center;
       }
+    }
+
+    .card--2 {
+      align-items: flex-start;
+      background-color: var(--color-primary);
+      &__title {
+        color: var(--color-dark);
+        text-transform: uppercase;
+        font-family: "Bebas Regular", "Arial Narrow", Arial, sans-serif;
+      }
+
+      &__img {
+        width: 100%;
+        height: 11rem;
+        content: url(/assets/img/card2-img.jpg);
+        border-radius: 0.3rem;
+        box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+      }
+
+      &__para {
+        color: var(--color-dark);
+        text-align: left;
+      }
 
       &__btn {
-        background: none;
-        border: none;
-        color: var(--color-light);
-        background-color: var(--color-dark-3);
-        padding: 0.3rem;
-        width: 5rem;
-        border-radius: 0.4rem;
-
-        &:hover {
-          cursor: pointer;
-        }
+        background-color: var(--color-accent-3);
+        color: var(--color-dark);
+        text-transform: uppercase;
+        font-size: 0.7rem;
       }
     }
   }
