--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -365,6 +365,38 @@
         border-radius: 0;
       }
     }
+
+    .card--3 {
+      align-items: flex-start;
+      background-color: var(--color-primary);
+      border-radius: 0;
+      &__title {
+        color: var(--color-dark);
+        text-transform: uppercase;
+        font-family: "Bebas Regular", "Arial Narrow", Arial, sans-serif;
+      }
+
+      &__img {
+        width: 100%;
+        height: 11rem;
+        content: url(/assets/img/card2-img.jpg);
+        border-radius: 0.3rem;
+        box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+      }
+
+      &__para {
+        color: var(--color-dark);
+        text-align: left;
+      }
+
+      &__btn {
+        background-color: var(--color-accent-3);
+        color: var(--color-dark);
+        text-transform: uppercase;
+        font-size: 0.7rem;
+        border-radius: 0;
+      }
+    }
   }
 
   // Button-Animations
