--- a/css/main.css
+++ b/css/main.css
@@ -520,6 +520,42 @@ body {
   border-radius: 0;
 }
 
+.main .cards .card--3 {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  background-color: var(--color-primary);
+  border-radius: 0;
+}
+
+.main .cards .card--3__title {
+  color: var(--color-dark);
+  text-transform: uppercase;
+  font-family: "Bebas Regular", "Arial Narrow", Arial, sans-serif;
+}
+
+.main .cards .card--3__img {
+  width: 100%;
+  height: 11rem;
+  content: url(/assets/img/card2-img.jpg);
+  border-radius: 0.3rem;
+  -webkit-box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+          box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+}
+
+.main .cards .card--3__para {
+  color: var(--color-dark);
+  text-align: left;
+}
+
+.main .cards .card--3__btn {
+  background-color: var(--color-accent-3);
+  color: var(--color-dark);
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  border-radius: 0;
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
