--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -367,7 +367,7 @@
     }
 
     .card--3 {
-      align-items: flex-start;
+      align-items: flex-end;
       background-color: var(--color-primary);
       border-radius: 0;
       &__title {
@@ -395,6 +395,7 @@
         text-transform: uppercase;
         font-size: 0.7rem;
         border-radius: 0;
+        align-self: flex-start;
       }
     }
   }
