--- a/css/main.css
+++ b/css/main.css
@@ -521,9 +521,9 @@ body {
 }
 
 .main .cards .card--3 {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   background-color: var(--color-primary);
   border-radius: 0;
 }
@@ -554,6 +554,8 @@ body {
   text-transform: uppercase;
   font-size: 0.7rem;
   border-radius: 0;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 
 @-webkit-keyframes levitate {
