--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -373,20 +373,20 @@
       &__title {
         color: var(--color-dark);
         text-transform: uppercase;
-        font-family: "Bebas Regular", "Arial Narrow", Arial, sans-serif;
+        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
       }
 
       &__img {
         width: 100%;
         height: 11rem;
-        content: url(/assets/img/card2-img.jpg);
-        border-radius: 0.3rem;
+        content: url(/assets/img/card3-img.jpg);
+        border-radius: 2rem;
         box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
       }
 
       &__para {
         color: var(--color-dark);
-        text-align: left;
+        text-align: center;
       }
 
       &__btn {
@@ -395,7 +395,6 @@
         text-transform: uppercase;
         font-size: 0.7rem;
         border-radius: 0;
-        align-self: flex-start;
       }
     }
   }
