--- a/css/main.css
+++ b/css/main.css
@@ -531,21 +531,21 @@ body {
 .main .cards .card--3__title {
   color: var(--color-dark);
   text-transform: uppercase;
-  font-family: "Bebas Regular", "Arial Narrow", Arial, sans-serif;
+  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
 }
 
 .main .cards .card--3__img {
   width: 100%;
   height: 11rem;
-  content: url(/assets/img/card2-img.jpg);
-  border-radius: 0.3rem;
+  content: url(/assets/img/card3-img.jpg);
+  border-radius: 2rem;
   -webkit-box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
           box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
 }
 
 .main .cards .card--3__para {
   color: var(--color-dark);
-  text-align: left;
+  text-align: center;
 }
 
 .main .cards .card--3__btn {
@@ -554,8 +554,6 @@ body {
   text-transform: uppercase;
   font-size: 0.7rem;
   border-radius: 0;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
 }
 
 @-webkit-keyframes levitate {
