Added border radius to card-3

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -369,7 +369,7 @@
     .card--3 {
       align-items: flex-end;
       background-color: var(--color-primary);
-      border-radius: 0;
+      border-radius: 2rem;
       &__title {
         color: var(--color-dark);
         text-transform: uppercase;
