--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -368,7 +368,7 @@
 
     .card--3 {
       align-items: flex-end;
-      background-color: var(--color-primary);
+      background-color: var(--color-accent-3);
       border-radius: 2rem;
       &__title {
         color: var(--color-dark);
@@ -387,14 +387,15 @@
       &__para {
         color: var(--color-dark);
         text-align: center;
+        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
       }
 
       &__btn {
-        background-color: var(--color-accent-3);
-        color: var(--color-dark);
+        background-color: var(--color-dark);
         text-transform: uppercase;
         font-size: 0.7rem;
-        border-radius: 0;
+        border-radius: 2rem;
+        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
       }
     }
   }
