--- a/css/main.css
+++ b/css/main.css
@@ -524,7 +524,7 @@ body {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  background-color: var(--color-primary);
+  background-color: var(--color-accent-3);
   border-radius: 2rem;
 }
 
@@ -546,14 +546,15 @@ body {
 .main .cards .card--3__para {
   color: var(--color-dark);
   text-align: center;
+  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
 }
 
 .main .cards .card--3__btn {
-  background-color: var(--color-accent-3);
-  color: var(--color-dark);
+  background-color: var(--color-dark);
   text-transform: uppercase;
   font-size: 0.7rem;
-  border-radius: 0;
+  border-radius: 2rem;
+  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
 }
 
 @-webkit-keyframes levitate {
