Edited card-4 style

--- a/css/main.css
+++ b/css/main.css
@@ -557,6 +557,40 @@ body {
   font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
 }
 
+.main .cards .card--4 {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  background-color: var(--color-accent-3);
+}
+
+.main .cards .card--4__title {
+  color: var(--color-dark);
+  text-transform: uppercase;
+  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+}
+
+.main .cards .card--4__img {
+  width: 100%;
+  height: 11rem;
+  content: url(/assets/img/card4-img.jpg);
+  -webkit-box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+          box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+}
+
+.main .cards .card--4__para {
+  color: var(--color-dark);
+  text-align: center;
+  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+}
+
+.main .cards .card--4__btn {
+  background-color: var(--color-dark);
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
