--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -398,6 +398,36 @@
         font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
       }
     }
+
+    .card--4 {
+      align-items: flex-end;
+      background-color: var(--color-accent-3);
+      &__title {
+        color: var(--color-dark);
+        text-transform: uppercase;
+        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+      }
+
+      &__img {
+        width: 100%;
+        height: 11rem;
+        content: url(/assets/img/card4-img.jpg);
+        box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+      }
+
+      &__para {
+        color: var(--color-dark);
+        text-align: center;
+        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+      }
+
+      &__btn {
+        background-color: var(--color-dark);
+        text-transform: uppercase;
+        font-size: 0.7rem;
+        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+      }
+    }
   }
 
   // Button-Animations
