--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -400,32 +400,32 @@
     }
 
     .card--4 {
-      align-items: flex-end;
-      background-color: var(--color-accent-3);
+      background-color: var(--color-dark);
       &__title {
-        color: var(--color-dark);
+        color: var(--color-light);
         text-transform: uppercase;
-        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+        font-family: "Coolvetica", "Arial Narrow", Arial, sans-serif;
       }
 
       &__img {
         width: 100%;
         height: 11rem;
         content: url(/assets/img/card4-img.jpg);
-        box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+        box-shadow: 0rem 0.2rem 1rem black;
       }
 
       &__para {
-        color: var(--color-dark);
+        color: var(--color-light);
         text-align: center;
-        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+        font-family: "Coolvetica", "Arial Narrow", Arial, sans-serif;
       }
 
       &__btn {
-        background-color: var(--color-dark);
+        background-color: var(--color-primary);
         text-transform: uppercase;
         font-size: 0.7rem;
-        font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+        border-radius: 0;
+        font-family: "Coolvetica", "Arial Narrow", Arial, sans-serif;
       }
     }
   }
