--- a/css/main.css
+++ b/css/main.css
@@ -558,37 +558,35 @@ body {
 }
 
 .main .cards .card--4 {
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  background-color: var(--color-accent-3);
+  background-color: var(--color-dark);
 }
 
 .main .cards .card--4__title {
-  color: var(--color-dark);
+  color: var(--color-light);
   text-transform: uppercase;
-  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+  font-family: "Coolvetica", "Arial Narrow", Arial, sans-serif;
 }
 
 .main .cards .card--4__img {
   width: 100%;
   height: 11rem;
   content: url(/assets/img/card4-img.jpg);
-  -webkit-box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
-          box-shadow: 0rem 0.2rem 1rem var(--color-dark-2);
+  -webkit-box-shadow: 0rem 0.2rem 1rem black;
+          box-shadow: 0rem 0.2rem 1rem black;
 }
 
 .main .cards .card--4__para {
-  color: var(--color-dark);
+  color: var(--color-light);
   text-align: center;
-  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+  font-family: "Coolvetica", "Arial Narrow", Arial, sans-serif;
 }
 
 .main .cards .card--4__btn {
-  background-color: var(--color-dark);
+  background-color: var(--color-primary);
   text-transform: uppercase;
   font-size: 0.7rem;
-  font-family: "Typo Grotesk", "Arial Narrow", Arial, sans-serif;
+  border-radius: 0;
+  font-family: "Coolvetica", "Arial Narrow", Arial, sans-serif;
 }
 
 @-webkit-keyframes levitate {
