--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -421,7 +421,7 @@
       }
 
       &__btn {
-        background-color: var(--color-primary);
+        background-color: var(--color-secondary);
         text-transform: uppercase;
         font-size: 0.7rem;
         border-radius: 0;
