--- a/css/main.css
+++ b/css/main.css
@@ -582,7 +582,7 @@ body {
 }
 
 .main .cards .card--4__btn {
-  background-color: var(--color-primary);
+  background-color: var(--color-secondary);
   text-transform: uppercase;
   font-size: 0.7rem;
   border-radius: 0;
