Changed image width in form

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -434,6 +434,10 @@
     .form {
       &__1 {
         outline: solid crimson 2px;
+
+        &--img {
+          width: 20rem;
+        }
       }
     }
   }
