--- a/css/main.css
+++ b/css/main.css
@@ -593,6 +593,10 @@ body {
   outline: solid crimson 2px;
 }
 
+.main .forms .form__1--img {
+  width: 20rem;
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
