--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -434,6 +434,8 @@
     .form {
       &__1 {
         outline: solid crimson 2px;
+        width: 20rem;
+        height: 20rem;
 
         &--img {
           width: 5rem;
