--- a/css/main.css
+++ b/css/main.css
@@ -593,6 +593,15 @@ body {
   outline: solid crimson 2px;
   width: 20rem;
   height: 20rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .main .forms .form__1--img {
