moved avatar to top of card

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -437,7 +437,7 @@
         width: 20rem;
         height: 20rem;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
 
         &--img {
