--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -439,6 +439,7 @@
         display: flex;
         align-items: flex-start;
         justify-content: center;
+        padding: 2rem;
 
         &--img {
           width: 5rem;
