--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -433,13 +433,14 @@
   .forms {
     .form {
       &__1 {
-        outline: solid crimson 2px;
+        // outline: solid crimson 2px;
         width: 20rem;
         height: 20rem;
         display: flex;
         align-items: flex-start;
         justify-content: center;
         padding: 1.5rem;
+        background-color: var(--color-light);
 
         &--img {
           width: 5rem;
