--- a/css/main.css
+++ b/css/main.css
@@ -603,6 +603,7 @@ body {
           justify-content: center;
   padding: 1.5rem;
   background-color: var(--color-light);
+  border-radius: 2rem;
 }
 
 .main .forms .form__1--img {
