added background color to avatar

--- a/css/main.css
+++ b/css/main.css
@@ -609,6 +609,7 @@ body {
 .main .forms .form__1--img {
   width: 5rem;
   border-radius: 50%;
+  background-color: var(--color-dark);
 }
 
 @-webkit-keyframes levitate {
