--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -445,6 +445,7 @@
         &--img {
           width: 5rem;
           border-radius: 50%;
+          background-color: var(--color-dark);
         }
       }
     }
