--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -440,6 +440,7 @@
         display: flex;
         align-items: flex-start;
         justify-content: center;
+        flex-direction: column;
         padding: 1.5rem;
         background-color: var(--color-light);
         border-radius: 1.2rem;
@@ -447,6 +448,10 @@
           width: 5rem;
           border-radius: 50%;
           background-color: var(--color-dark);
+        }
+
+        &--name {
+          color: var(--color-dark-3);
         }
       }
     }
