centered form items

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -438,7 +438,7 @@
         width: 20rem;
         height: 20rem;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         justify-content: center;
         flex-direction: column;
         padding: 1.5rem;
