--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -448,6 +448,7 @@
           width: 5rem;
           border-radius: 50%;
           background-color: var(--color-dark);
+          margin: 1rem;
         }
 
         &--name {
