added color to email text

--- a/css/main.css
+++ b/css/main.css
@@ -625,6 +625,10 @@ body {
   color: var(--color-dark-3);
 }
 
+.main .forms .form__1--email {
+  color: var(--color-dark-3);
+}
+
 .main .forms .form__1--input {
   border-radius: 0.5rem;
   border: var(--color-dark) 0.4px solid;
