--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -455,6 +455,10 @@
           color: var(--color-dark-3);
         }
 
+        &--email {
+          color: var(--color-dark-3);
+        }
+
         &--input {
           border-radius: 0.5rem;
           border: var(--color-dark) 0.4px solid;
