grouped form fields

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -439,7 +439,7 @@
         height: 20rem;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
         flex-direction: column;
         padding: 1.5rem;
         background-color: var(--color-light);
