added flexbox to text input fields

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -463,6 +463,12 @@
           border-radius: 0.5rem;
           border: var(--color-dark) 0.4px solid;
         }
+
+        &--field {
+          display: flex;
+          flex-direction: column;
+          margin: 0.4rem;
+        }
       }
     }
   }
