--- a/css/main.css
+++ b/css/main.css
@@ -634,6 +634,17 @@ body {
   border: var(--color-dark) 0.4px solid;
 }
 
+.main .forms .form__1--field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0.4rem;
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
