started basic styling for form--1 button

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -474,6 +474,9 @@
         }
 
         &--button {
+          align-self: center;
+          margin: 0.4rem;
+          width: 5rem;
         }
       }
     }
