--- a/css/main.css
+++ b/css/main.css
@@ -653,6 +653,14 @@ body {
   font-size: 0.8rem;
 }
 
+.main .forms .form__1--button {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0.4rem;
+  width: 5rem;
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
