--- a/css/main.css
+++ b/css/main.css
@@ -658,7 +658,11 @@ body {
       -ms-grid-row-align: center;
       align-self: center;
   margin: 0.4rem;
-  width: 5rem;
+  width: 6rem;
+  border-radius: 1rem;
+  border: none;
+  background-color: crimson;
+  color: var(--color-light);
 }
 
 @-webkit-keyframes levitate {
