increased form--1 button size

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -483,6 +483,7 @@
           border: none;
           background-color: crimson;
           color: var(--color-light);
+          height: 1.5rem;
         }
       }
     }
