--- a/css/main.css
+++ b/css/main.css
@@ -629,6 +629,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main .forms .form__1--input {
