added cursor pointer to form--1 button

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -485,6 +485,10 @@
           background-color: crimson;
           color: var(--color-light);
           height: 1.5rem;
+
+          &:hover {
+            cursor: pointer;
+          }
         }
       }
     }
