--- a/css/main.css
+++ b/css/main.css
@@ -669,6 +669,10 @@ body {
   height: 1.5rem;
 }
 
+.main .forms .form__1--button:hover {
+  cursor: pointer;
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
