added hover effect to translate form--1 button

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -489,6 +489,7 @@
           &:hover {
             cursor: pointer;
             width: 7rem;
+            transform: translateY(0.2rem);
           }
         }
       }
