--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -485,11 +485,11 @@
           background-color: crimson;
           color: var(--color-light);
           height: 1.5rem;
+          transition: all 0.4s ease-in-out;
 
           &:hover {
             cursor: pointer;
             width: 7rem;
-            transform: translateY(0.2rem);
           }
         }
       }
