--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -490,6 +490,7 @@
           &:hover {
             cursor: pointer;
             width: 7rem;
+            box-shadow: 0rem 0.1rem 0.2rem var(--color-dark-3);
           }
         }
       }
