--- a/css/main.css
+++ b/css/main.css
@@ -674,6 +674,8 @@ body {
 .main .forms .form__1--button:hover {
   cursor: pointer;
   width: 7rem;
+  -webkit-box-shadow: 0rem 0.1rem 0.2rem var(--color-dark-3);
+          box-shadow: 0rem 0.1rem 0.2rem var(--color-dark-3);
 }
 
 @-webkit-keyframes levitate {
