--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -439,7 +439,7 @@
         height: 23rem;
         display: flex;
         align-items: center;
-        // justify-content: space-between;
+        justify-content: space-around;
         flex-direction: column;
         padding: 1.5rem;
         background-color: var(--color-light);
