--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -432,7 +432,10 @@
   }
 
   .forms {
+    // outline: 0.5rem coral solid;
+    width: 80%;
     display: flex;
+    justify-content: space-around;
     .form {
       &__1 {
         // outline: solid crimson 2px;
