--- a/css/main.css
+++ b/css/main.css
@@ -685,6 +685,89 @@ body {
           box-shadow: 0rem 0.1rem 0.2rem var(--color-dark-3);
 }
 
+.main .forms .form__2 {
+  width: 20rem;
+  height: 23rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1.5rem;
+  background-color: var(--color-light);
+  border-radius: 1.2rem;
+}
+
+.main .forms .form__2--img {
+  width: 5rem;
+  border-radius: 50%;
+  background-color: var(--color-dark);
+  margin: 0.8rem;
+}
+
+.main .forms .form__2 .fields {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .forms .form__2--input {
+  border-radius: 0.5rem;
+  border: var(--color-dark) 0.4px solid;
+}
+
+.main .forms .form__2--field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0.3rem;
+}
+
+.main .forms .form__2--text {
+  color: var(--color-dark-3);
+  font-size: 0.8rem;
+}
+
+.main .forms .form__2--button {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0.4rem;
+  width: 6rem;
+  border-radius: 1rem;
+  border: none;
+  background-color: crimson;
+  color: var(--color-light);
+  height: 1.5rem;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.main .forms .form__2--button:hover {
+  cursor: pointer;
+  width: 7rem;
+  -webkit-box-shadow: 0rem 0.1rem 0.2rem var(--color-dark-3);
+          box-shadow: 0rem 0.1rem 0.2rem var(--color-dark-3);
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
