changed form--2 background color

--- a/css/main.css
+++ b/css/main.css
@@ -701,7 +701,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 1.5rem;
-  background-color: var(--color-light);
+  background-color: var(--color-accent-2);
   border-radius: 1.2rem;
 }
 
