--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -506,7 +506,7 @@
         justify-content: space-around;
         flex-direction: column;
         padding: 1.5rem;
-        background-color: var(--color-light);
+        background-color: var(--color-accent-2);
         border-radius: 1.2rem;
         &--img {
           width: 5rem;
