changed form--2 button button background

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -545,7 +545,7 @@
 
           border-radius: 1rem;
           border: none;
-          background-color: crimson;
+          background-color: var(--color-dark);
           color: var(--color-light);
           height: 1.5rem;
           transition: all 0.4s ease-in-out;
