--- a/css/main.css
+++ b/css/main.css
@@ -754,7 +754,7 @@ body {
   width: 6rem;
   border-radius: 1rem;
   border: none;
-  background-color: crimson;
+  background-color: var(--color-dark);
   color: var(--color-light);
   height: 1.5rem;
   -webkit-transition: all 0.4s ease-in-out;
