removed border radius from btn in form--2

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -543,7 +543,7 @@
           margin: 0.4rem;
           width: 6rem;
 
-          border-radius: 1rem;
+          // border-radius: 1rem;
           border: none;
           background-color: var(--color-dark);
           color: var(--color-light);
