removed form--2 input borders

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -523,7 +523,7 @@
         }
 
         &--input {
-          border: var(--color-dark) 0.4px solid;
+          // border: var(--color-dark) 0.4px solid;
         }
 
         &--field {
