--- a/css/main.css
+++ b/css/main.css
@@ -734,6 +734,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 0.3rem;
+  text-align: center;
 }
 
 .main .forms .form__2--text {
