--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -497,7 +497,68 @@
           }
         }
       }
+
       &__2 {
+        // outline: solid crimson 2px;
+        width: 20rem;
+        height: 23rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        padding: 1.5rem;
+        background-color: var(--color-accent-2);
+        &--img {
+          width: 5rem;
+          height: 5rem;
+          border-radius: 50%;
+          background-color: var(--color-dark);
+          margin: 0.8rem;
+        }
+
+        .fields {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+
+        &--input {
+          // border: var(--color-dark) 0.4px solid;
+        }
+
+        &--field {
+          display: flex;
+          flex-direction: column;
+          padding: 0.3rem;
+          text-align: center;
+        }
+
+        &--text {
+          color: var(--color-dark-3);
+          font-size: 0.8rem;
+        }
+
+        &--button {
+          // stock style
+          align-self: center;
+          margin: 0.4rem;
+          width: 6rem;
+
+          // border-radius: 1rem;
+          border: none;
+          background-color: var(--color-dark);
+          color: var(--color-light);
+          height: 1.5rem;
+          transition: all 0.4s ease-in-out;
+
+          &:hover {
+            cursor: pointer;
+            width: 7rem;
+          }
+        }
+      }
+
+      &__3 {
         // outline: solid crimson 2px;
         width: 20rem;
         height: 23rem;
