--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -567,7 +567,7 @@
         justify-content: space-around;
         flex-direction: column;
         padding: 1.5rem;
-        background-color: var(--color-accent-2);
+        background-color: var(--color-primary);
         &--img {
           width: 5rem;
           height: 5rem;
