--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -579,7 +579,7 @@
         .fields {
           display: flex;
           flex-direction: column;
-          align-items: center;
+          // align-items: center;
         }
 
         &--input {
