--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -579,7 +579,6 @@
         .fields {
           display: flex;
           flex-direction: column;
-          // align-items: center;
         }
 
         &--input {
@@ -590,7 +589,7 @@
           display: flex;
           flex-direction: column;
           padding: 0.3rem;
-          text-align: center;
+          // text-align: center;
         }
 
         &--text {
