added 3rem border radius on form--3

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -568,6 +568,7 @@
         flex-direction: column;
         padding: 1.5rem;
         background-color: var(--color-primary);
+        border-radius: 3rem;
         &--img {
           width: 5rem;
           height: 5rem;
