--- a/css/main.css
+++ b/css/main.css
@@ -778,6 +778,7 @@ body {
           flex-direction: column;
   padding: 1.5rem;
   background-color: var(--color-primary);
+  border-radius: 3rem;
 }
 
 .main .forms .form__3--img {
