--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -607,7 +607,7 @@
           // border-radius: 1rem;
           border: none;
           background-color: var(--color-accent-3);
-          color: var(--color-light);
+          color: var(--color-dark);
           height: 1.5rem;
           transition: all 0.4s ease-in-out;
 
