--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -604,7 +604,7 @@
           margin: 0.4rem;
           width: 6rem;
 
-          // border-radius: 1rem;
+          border-radius: 0.5rem;
           border: none;
           background-color: var(--color-accent-3);
           color: var(--color-dark);
