--- a/css/main.css
+++ b/css/main.css
@@ -826,6 +826,7 @@ body {
       align-self: center;
   margin: 0.4rem;
   width: 6rem;
+  border-radius: 0.5rem;
   border: none;
   background-color: var(--color-accent-3);
   color: var(--color-dark);
