added hover effect to btn on form--3

--- a/css/main.css
+++ b/css/main.css
@@ -837,6 +837,8 @@ body {
 
 .main .forms .form__3--button:hover {
   cursor: pointer;
+  -webkit-transform: translateX(1.5rem);
+          transform: translateX(1.5rem);
 }
 
 @-webkit-keyframes levitate {
