--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -613,6 +613,7 @@
 
           &:hover {
             cursor: pointer;
+            transform: translateX(1.5rem);
           }
         }
       }
