Changed form--4 background color

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -621,7 +621,7 @@
         justify-content: space-around;
         flex-direction: column;
         padding: 1.5rem;
-        background-color: var(--color-primary);
+        background-color: var(--color-secondary);
         box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
         &--img {
           width: 5rem;
