--- a/css/main.css
+++ b/css/main.css
@@ -853,7 +853,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 1.5rem;
-  background-color: var(--color-primary);
+  background-color: var(--color-secondary);
   -webkit-box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
           box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
 }
