--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -659,7 +659,7 @@
           width: 6rem;
 
           border: none;
-          background-color: var(--color-accent-3);
+          background-color: var(--color-primary);
           color: var(--color-dark);
           height: 1.5rem;
           transition: all 0.4s ease-in-out;
