--- a/css/main.css
+++ b/css/main.css
@@ -904,7 +904,7 @@ body {
   margin: 0.4rem;
   width: 6rem;
   border: none;
-  background-color: var(--color-accent-3);
+  background-color: var(--color-primary);
   color: var(--color-dark);
   height: 1.5rem;
   -webkit-transition: all 0.4s ease-in-out;
