--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -660,7 +660,7 @@
 
           border: none;
           background-color: var(--color-primary);
-          color: var(--color-dark);
+          color: var(--color-light);
           height: 1.5rem;
           transition: all 0.4s ease-in-out;
 
