--- a/css/main.css
+++ b/css/main.css
@@ -905,7 +905,7 @@ body {
   width: 6rem;
   border: none;
   background-color: var(--color-primary);
-  color: var(--color-dark);
+  color: var(--color-light);
   height: 1.5rem;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
