Added border radius to form--4 btn

--- a/css/main.css
+++ b/css/main.css
@@ -909,6 +909,7 @@ body {
   height: 1.5rem;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
+  border-radius: 1rem;
 }
 
 .main .forms .form__4--button:hover {
