--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -663,6 +663,7 @@
           color: var(--color-light);
           height: 1.5rem;
           transition: all 0.4s ease-in-out;
+          border-radius: 1rem;
 
           &:hover {
             cursor: pointer;
