--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -647,7 +647,7 @@
         }
 
         &--text {
-          color: var(--color-dark-3);
+          color: var(--color-light);
           font-size: 0.8rem;
         }
 
