--- a/css/main.css
+++ b/css/main.css
@@ -892,7 +892,7 @@ body {
 }
 
 .main .forms .form__4--text {
-  color: var(--color-dark-3);
+  color: var(--color-light);
   font-size: 0.8rem;
 }
 
