--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -630,6 +630,7 @@
         .fields {
           display: flex;
           flex-direction: column;
+          align-items: center;
         }
 
         &--input {
