Centered fields text on form--4

--- a/css/main.css
+++ b/css/main.css
@@ -892,6 +892,7 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 0.3rem;
+  text-align: center;
 }
 
 .main .forms .form__4--text {
