--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -641,6 +641,7 @@
           display: flex;
           flex-direction: column;
           padding: 0.3rem;
+          text-align: center;
         }
 
         &--text {
