Changed form--4 img avatar

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -670,6 +670,66 @@
           }
         }
       }
+      &__5 {
+        // outline: solid crimson 2px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex-direction: column;
+        padding: 1.5rem;
+        background-color: var(--color-secondary);
+        box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
+        border-radius: 1rem;
+        &--img {
+          width: 5rem;
+          height: 5rem;
+          border-radius: 35%;
+          background-color: var(--color-dark);
+          margin: 0.8rem;
+        }
+
+        .fields {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+
+        &--input {
+          border: none;
+        }
+
+        &--field {
+          display: flex;
+          flex-direction: column;
+          padding: 0.3rem;
+          text-align: center;
+        }
+
+        &--text {
+          color: var(--color-light);
+          font-size: 0.8rem;
+        }
+
+        &--button {
+          // stock style
+          align-self: center;
+          margin: 0.4rem;
+          width: 6rem;
+
+          border: none;
+          background-color: var(--color-primary);
+          color: var(--color-light);
+          height: 1.5rem;
+          transition: all 0.4s ease-in-out;
+          border-radius: 1rem;
+
+          &:hover {
+            cursor: pointer;
+            transform: translateX(1.5rem);
+            box-shadow: -0.2rem 0rem 0.5rem var(--color-dark-3);
+          }
+        }
+      }
     }
   }
 
