--- a/css/main.css
+++ b/css/main.css
@@ -924,6 +924,91 @@ body {
           box-shadow: -0.2rem 0rem 0.5rem var(--color-dark-3);
 }
 
+.main .forms .form__5 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1.5rem;
+  background-color: var(--color-secondary);
+  -webkit-box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
+          box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
+  border-radius: 1rem;
+}
+
+.main .forms .form__5--img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 35%;
+  background-color: var(--color-dark);
+  margin: 0.8rem;
+}
+
+.main .forms .form__5 .fields {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main .forms .form__5--input {
+  border: none;
+}
+
+.main .forms .form__5--field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0.3rem;
+  text-align: center;
+}
+
+.main .forms .form__5--text {
+  color: var(--color-light);
+  font-size: 0.8rem;
+}
+
+.main .forms .form__5--button {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0.4rem;
+  width: 6rem;
+  border: none;
+  background-color: var(--color-primary);
+  color: var(--color-light);
+  height: 1.5rem;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  border-radius: 1rem;
+}
+
+.main .forms .form__5--button:hover {
+  cursor: pointer;
+  -webkit-transform: translateX(1.5rem);
+          transform: translateX(1.5rem);
+  -webkit-box-shadow: -0.2rem 0rem 0.5rem var(--color-dark-3);
+          box-shadow: -0.2rem 0rem 0.5rem var(--color-dark-3);
+}
+
 @-webkit-keyframes levitate {
   0% {
     -webkit-transform: translateY(0) scale(1);
