--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -677,7 +677,7 @@
         justify-content: space-around;
         flex-direction: column;
         padding: 1.5rem;
-        background-color: var(--color-secondary);
+        background-color: var(--color-light-2);
         box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
         border-radius: 1rem;
         &--img {
