--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -707,7 +707,7 @@
         }
 
         &--text {
-          color: var(--color-light);
+          color: var(--color-dark);
           font-size: 0.8rem;
         }
 
