Changed form4 btn background color

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -718,7 +718,7 @@
           width: 6rem;
 
           border: none;
-          background-color: var(--color-primary);
+          background-color: var(--color-secondary);
           color: var(--color-light);
           height: 1.5rem;
           transition: all 0.4s ease-in-out;
