--- a/css/main.css
+++ b/css/main.css
@@ -994,7 +994,7 @@ body {
   margin: 0.4rem;
   width: 6rem;
   border: none;
-  background-color: var(--color-primary);
+  background-color: var(--color-secondary);
   color: var(--color-light);
   height: 1.5rem;
   -webkit-transition: all 0.4s ease-in-out;
