--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -719,7 +719,7 @@
 
           border: none;
           background-color: var(--color-secondary);
-          color: var(--color-light);
+          color: var(--color-dark);
           height: 1.5rem;
           transition: all 0.4s ease-in-out;
           border-radius: 1rem;
