--- a/css/main.css
+++ b/css/main.css
@@ -995,7 +995,7 @@ body {
   width: 6rem;
   border: none;
   background-color: var(--color-secondary);
-  color: var(--color-light);
+  color: var(--color-dark);
   height: 1.5rem;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
