Added hover effect on form--5 avatar

--- a/css/components/_components.scss
+++ b/css/components/_components.scss
@@ -686,6 +686,9 @@
           border-radius: 60%;
           background-color: var(--color-dark);
           margin: 0.8rem;
+          &:hover {
+            cursor: pointer;
+          }
         }
 
         .fields {
