--- a/css/main.css
+++ b/css/main.css
@@ -941,6 +941,7 @@ body {
   background-color: var(--color-light-2);
   -webkit-box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
           box-shadow: 0rem 0.5rem 0.2rem var(--color-dark-3);
+  border-radius: 0.5rem;
 }
 
 .main .forms .form__5--img {
